# hypermesh

./: .gitignore  ALM_IMPLEMENTATION_SUMMARY.md  API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS_SUMMARY.md  ARCHITECTURE_DEEP_DIVE.md  ARCHITECTURE_SEPARATION.md  ASSET_SYSTEM_COMPLETION.md  BACKEND_SERVICES_DEPLOYMENT_COMPLETE.md  BLOCKCHAIN_NATIVE_COMPUTE_IMPLEMENTATION.md  BOOTSTRAP_ROADMAP.md  BUILD_RECOVERY_COMPLETE.md  BUILD_RECOVERY_PLAN.md  BUILD_STATUS.md  BUILD_STATUS_REPORT.md  CAESAR_STRATEGIC_ALIGNMENT_ASSESSMENT.md  CERTIFICATE_ARCHITECTURE.spec  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  CODE_QUALITY_ASSESSMENT_REPORT.md  CODE_REVIEW_IMPLEMENTATION_VS_DOCUMENTATION.md  COMPETITIVE_POSITIONING_STRATEGY_2025.md  COMPILATION_FIX_PLAN.md  COMPLETE_INTEGRATION_IMPLEMENTATION_REPORT.md  COMPONENT_INTEGRATION_ANALYSIS.md  COMPONENT_LIBRARY_DESIGN.md  COMPREHENSIVE_CLEANUP_ANALYSIS.md  COMPREHENSIVE_CODE_QUALITY_REPORT.md  COMPREHENSIVE_SECURITY_ASSESSMENT_REPORT.md  COMPREHENSIVE_SECURITY_AUDIT_REPORT.md  COMPREHENSIVE_SECURITY_VALIDATION_FINAL_REPORT.md  COMPREHENSIVE_SECURITY_VALIDATION_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CONSENSUS_INTEGRATION.md  CONSENSUS_PROOF_INTEGRATION_SUMMARY.md  CONSOLIDATION_ANALYSIS.md  CONSOLIDATION_PLAN.md  CONSOLIDATION_REPORT.md  CONTAINER_ORCHESTRATION_IMPLEMENTATION_REPORT.md  (+193 more)
benchmarks/mfn/: Cargo.toml
blockmatrix/: ALM_IMPLEMENTATION_SUMMARY.md  ASSET_SYSTEM_COMPLETION.md  BLOCKCHAIN_NATIVE_COMPUTE_IMPLEMENTATION.md  CLAUDE.md  COMPLETION_ANALYSIS.md  CONSENSUS_DISCOVERY_SUMMARY.md  CONSENSUS_PROOF_INTEGRATION_SUMMARY.md  CONSENSUS_SERVER_IMPLEMENTATION.md  CONSENSUS_SERVER_REQUIREMENTS.md  CONTAINER_ORCHESTRATION_IMPLEMENTATION_REPORT.md  CONTAINER_SECURITY_IMPLEMENTATION.md  Cargo.toml  Cargo.toml.backup  DOCUMENTATION_CLEANUP_PLAN.md  GATE2_ASSET_SYSTEM_REPORT.md  GATE3_PROXY_NAT_REPORT.md  GATE4_CONSENSUS_STATUS.md  HTTP_TO_STOQ_MIGRATION.md  INTEGRATION_TEST_GUIDE.md  METRICS_ANALYSIS_REPORT.md  MONITORING_REFACTOR_SUMMARY.md  OS_ABSTRACTION_TESTS_INDEX.md  OS_INTEGRATION_TEST_SUMMARY.md  PERFORMANCE_BASELINE.md  PERFORMANCE_BASELINE_REPORT.md  PHASE0_BUILD_STABILIZATION_REPORT.md  QUALITY_ASSESSMENT_REPORT.md  QUALITY_REVIEW_REPORT.md  README.md  REMEDIATION_PLAN.md  SPRINT3_TESTING_REPORT.md  SPRINT3_TEST_DELIVERY.md  STOQ_INTEGRATION_READINESS.md  STOQ_VERIFICATION_REPORT.md  STRATEGIC_ANALYSIS_REPORT.md  TESTING_REPORT.md  WINDOWS_INTEGRATION.md  WINDOWS_PERFORMANCE_COUNTERS_REPORT.md  baseline_perf_test  fix_transport_imports.sh  (+11 more)
blockmatrix/blockchain/: README.md
blockmatrix/core/: .gitignore  Cargo.toml
blockmatrix/docs/: DOCUMENTATION_CONSOLIDATION_LIST.md  EBPF_CODE_TO_APPLY.md  EBPF_INTEGRATION.md  EBPF_KERNEL_INTEGRATION_REPORT.md  REALITY_CHECK.md  SPRINT2_EBPF_IMPLEMENTATION_REPORT.md
blockmatrix/ebpf_programs/: README.md  compile_ebpf.sh  kprobe_execve.c  tracepoint_network.c  xdp_packet_counter.c
blockmatrix/examples/: cluster_integration.rs  comprehensive_test_runner.rs  quic_basic.rs  transport_integration.rs
blockmatrix/monitoring/: mod.rs
blockmatrix/nexus-config-examples/: cluster.yaml  service.yaml
blockmatrix/src/: lib.rs  main.rs
blockmatrix/tests/: extension_loading_test.rs  gate2_asset_test.rs  gate3_proxy_test.rs  multi_node_integration.rs  os_integration_standalone.rs  os_integration_test.rs  test_ebpf_integration.rs  test_ebpf_kernel_integration.rs  test_ebpf_linux.rs  test_load.rs  test_multi_node.rs  test_performance_validation.rs  test_windows_performance.rs
blockmatrix/website/: styles.css
catalog/: API_MIGRATION_GUIDE.md  ASSET_LIBRARY_CORE.md  CATALOG_PLUGIN_SPEC.md  CATALOG_SDK_ASSESSMENT_REPORT.md  CATALOG_TO_PLUGIN_MAPPING.md  COMPLETION_ANALYSIS.md  Cargo.toml  DATA_STRUCTURE_MIGRATION.md  DISTRIBUTION_LAYER.md  Dockerfile  HYPERMESH_INTEGRATION_COMPLETE.md  INTEGRATION_POINTS.md  P2P_DISTRIBUTION_IMPLEMENTATION.md  PHASE3_1_EXTENSION_IMPLEMENTATION.md  PHASE_2_1_EXTRACTION_COMPLETE.md  README.md  SHARING_ARCHITECTURE.md  TRUSTCHAIN_INTEGRATION_REPORT.md  USER_INTERFACE.md  build.rs  performance_results.json  version.script
catalog/.shamash/: custom-rules.json
catalog/data/: mcp_omni.db-shm  mcp_omni.db-wal
catalog/src/: assets.rs  consensus.rs  documentation.rs  extension.rs  hypermesh_bridge.rs  hypermesh_integration.rs  julia_vm.rs  lib.rs  plugin.rs  registry.rs  scripting.rs  security.rs  template.rs  validation.rs  versioning.rs
catalog/tests/: extension_test.rs  full_system_test.rs  hypermesh_integration_test.rs  library_extraction_test.rs  p2p_distribution_test.rs  security_integration.rs  security_test.rs  sharing_test.rs
core/ebpf-integration/: Cargo.toml
core/examples/: Cargo.toml
core/nexus-integration/: Cargo.toml
core/runtime/: Cargo.toml
core/scheduler/: Cargo.toml
core/state/: Cargo.toml
examples/: Cargo.toml  connection_manager_integration.rs  quic_working.rs
examples/phoenix/: performance_monitor.rs  phoenix_demo.rs
interface/phase1-testing/: Cargo.toml
lib/: Cargo.toml  README.md
lib/src/: assets.rs  common.rs  consensus.rs  lib.rs
phoenix-cli/: Cargo.toml
phoenix-cli/src/: main.rs
phoenix-sdk/: Cargo.toml  README.md
phoenix-sdk/examples/: chat_client.rs  chat_server.rs  microservice_mesh.rs
phoenix-sdk/src/: compression.rs  config.rs  connection.rs  errors.rs  lib.rs  listener.rs  metrics.rs  (+1 more)
satchel/: Cargo.toml
stoq/: ARCHITECTURE.md  COMPLETION_ANALYSIS.md  Cargo.toml  INTEGRATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PROTOCOL_INTEGRATION.md  README.md  STOQ_PROTOCOL_REVIEW.md  STOQ_TRANSPORT_ANALYSIS.md
trustchain/: ARCHITECTURE.md  COMPLETION_ANALYSIS.md  COMPREHENSIVE_QUALITY_VALIDATION_REPORT.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  ECOSYSTEM_OVERVIEW.md  INTEGRATION_TEST_REPORT.md  MONITORING_REFACTOR.md  PRODUCTION_DEPLOYMENT.md  README.md  REFACTORING_COMPLETE.md  STRATEGIC_ALIGNMENT_ANALYSIS_2025.md  TRUSTCHAIN_CA_ASSESSMENT_REPORT.md  TRUSTCHAIN_INFRASTRUCTURE_ANALYSIS.md  UI_IMPLEMENTATION_SUMMARY.md  security_audit.py  security_audit_report.json  test-monitoring.sh
(+1376 files in other folders)
