[package]
name = "hypermesh-server"
version = "1.0.0"
edition = "2021"
authors = ["HyperMesh Team"]
description = "HyperMesh Protocol Stack - Unified STOQ/HyperMesh/TrustChain Server"
license = "MIT OR Apache-2.0"
keywords = ["hypermesh", "protocol", "stoq", "trustchain", "consensus"]

[dependencies]
# Core async runtime
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# STOQ Transport (embedded) - QUIC over IPv6 foundation
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
socket2 = "0.5"
bytes = { version = "1.6", features = ["serde"] }
stoq = { path = "stoq" }  # Local STOQ protocol implementation

# High-performance data structures for 40 Gbps optimization
dashmap = "6.0"
arc-swap = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"

# TrustChain CA (embedded) - Certificate authority and DNS
x509-parser = "0.16"
der-parser = "9.0"
rcgen = "0.13"
ring = "0.17"
pem = "3.0"
der = "0.7"

# Post-quantum cryptography (FALCON-1024 + Kyber)
pqcrypto-falcon = "0.3"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
aes-gcm = "0.10"

# DNS resolution (embedded)
hickory-client = "0.24"
hickory-proto = "0.24"

# HyperMesh Assets (embedded) - Consensus and asset management
sha2 = "0.10"
sha1 = "0.10"
sha3 = "0.10"
hmac = "0.12"
blake3 = "1.5"
merkletree = "0.23"
uuid = { version = "1.6", features = ["v4", "serde"] }
num_cpus = "1.16"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
config = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }


# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time and data handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
rsa = "0.9"

# Performance monitoring
prometheus = "0.13"
sysinfo = "0.30"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tempfile = "3.10"
tokio-test = "0.4"

[features]
default = ["hypermesh-full", "high-performance"]

# Complete HyperMesh stack
hypermesh-full = ["stoq-transport", "hypermesh-assets", "trustchain-authority"]

# Individual layers (for testing/development)
stoq-transport = []
hypermesh-assets = []
trustchain-authority = []

# Performance optimizations
high-performance = ["hardware-acceleration", "zero-copy"]
hardware-acceleration = []
zero-copy = []

# Deployment modes
production = ["hypermesh-full", "high-performance", "consensus-mandatory"]
development = ["hypermesh-full", "legacy-compatibility"]
consensus-mandatory = []
legacy-compatibility = []

[[bin]]
name = "hypermesh-server"
path = "src/main.rs"


[[bench]]
name = "protocol_stack"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false

[profile.dev]
opt-level = 1
debug = true
panic = "unwind"

[profile.bench]
inherits = "release"
debug = true