[workspace]
members = [
    "stoq",
    "trustchain",
    "caesar",
    "catalog",
    "hypermesh",
]
resolver = "2"

# Unified dependency management for workspace
[workspace.dependencies]
# Core async runtime
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tokio-test = "0.4"
async-trait = "0.1"
futures = "0.3"

# QUIC and networking
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
rcgen = "0.13"
socket2 = "0.5"
bytes = { version = "1.6", features = ["serde"] }
webpki-roots = "0.26"

# HTTP and web
http = "1.0"
http-body-util = "0.1"
axum = { version = "0.7", features = ["ws"] }
warp = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full", "timeout"] }
hyper = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# HTTP/3 Bridge
h3 = "0.0.8"
h3-quinn = "0.0.10"

# Cryptography
ring = "0.17"
rust_decimal = "1.35"
sha2 = "0.10"
sha1 = "0.10"
sha3 = "0.10"
hmac = "0.12"
blake3 = "1.5"
merkletree = "0.23"
ed25519-dalek = "2.0"
rsa = "0.9"
aes-gcm = "0.10"

# Post-quantum cryptography
pqcrypto = "0.17"
pqcrypto-falcon = "0.3"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# Certificate handling
x509-parser = "0.16"
der-parser = "9.0"
pem = "3.0"
der = "0.7"

# DNS
hickory-client = "0.24"
hickory-proto = "0.24"
trust-dns-client = "0.23"
trust-dns-server = "0.23"
trust-dns-proto = "0.23"

# Data structures
dashmap = "6.0"
arc-swap = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"
lock_api = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
bincode = "1.3"
config = "0.14"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"
num_cpus = "1.16"
lazy_static = "1.4"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Storage
sled = "0.34"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Testing
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
proptest = "1.4"
tempfile = "3.10"

# Performance
sysinfo = "0.30"

# Compression
zstd = "0.13"
lz4 = "1.24"
flate2 = "1.0"
tar = "0.4"

# Additional
glob = "0.3"
regex = "1.10"
shellexpand = "3.1"
handlebars = "5.1"
libloading = "0.8"
semver = "1.0"
fastrand = "2.0"
which = "6.0"
# prometheus = ... # REMOVED: Build native monitoring (100% standalone requirement)

[package]
name = "web3"
version = "1.0.0"
edition = "2021"
authors = ["HyperMesh Team"]
description = "Web3 Ecosystem - Unified STOQ/HyperMesh/TrustChain/Caesar/Catalog Stack"
license = "MIT OR Apache-2.0"
keywords = ["hypermesh", "protocol", "stoq", "trustchain", "consensus"]

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# STOQ Transport (embedded) - QUIC over IPv6 foundation
quinn = { workspace = true }
rustls = { workspace = true }
socket2 = { workspace = true }
bytes = { workspace = true }
stoq = { path = "stoq" }  # Local STOQ protocol implementation
caesar = { path = "caesar" }  # Local Caesar economic system

# HTTP/3 Bridge for browser compatibility
h3 = { workspace = true }
h3-quinn = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }

# High-performance data structures for 40 Gbps optimization
dashmap = { workspace = true }
arc-swap = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }

# TrustChain CA (embedded) - Certificate authority and DNS
x509-parser = { workspace = true }
der-parser = { workspace = true }
rcgen = { workspace = true }
ring = { workspace = true }
pem = { workspace = true }
der = { workspace = true }

# Post-quantum cryptography (FALCON-1024 + Kyber)
pqcrypto-falcon = { workspace = true }
pqcrypto-kyber = { workspace = true }
pqcrypto-traits = { workspace = true }
aes-gcm = { workspace = true }

# DNS resolution (embedded)
hickory-client = { workspace = true }
hickory-proto = { workspace = true }

# HyperMesh Assets (embedded) - Consensus and asset management
sha2 = { workspace = true }
sha1 = { workspace = true }
sha3 = { workspace = true }
hmac = { workspace = true }
blake3 = { workspace = true }
merkletree = { workspace = true }
uuid = { workspace = true }
num_cpus = { workspace = true }

# Serialization and configuration
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
config = { workspace = true }
clap = { workspace = true }

# Error handling and logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time and data handling
chrono = { workspace = true }
time = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }

# Performance monitoring
sysinfo = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }

[features]
default = ["hypermesh-full", "high-performance"]

# Complete HyperMesh stack
hypermesh-full = ["stoq-transport", "hypermesh-assets", "trustchain-authority"]

# Individual layers (for testing/development)
stoq-transport = []
hypermesh-assets = []
trustchain-authority = []

# Performance optimizations
high-performance = ["hardware-acceleration", "zero-copy"]
hardware-acceleration = []
zero-copy = []

# Deployment modes
production = ["hypermesh-full", "high-performance", "consensus-mandatory"]
development = ["hypermesh-full", "legacy-compatibility"]
consensus-mandatory = []
legacy-compatibility = []

[[bin]]
name = "hypermesh-server"
path = "src/main.rs"


[[bench]]
name = "protocol_stack"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false

[profile.dev]
opt-level = 1
debug = true
panic = "unwind"

[profile.bench]
inherits = "release"
debug = true