[package]
name = "catalog"
version = "0.1.0"
edition = "2021"
authors = ["HyperMesh Team"]
description = "Catalog - HyperMesh Asset Package Manager for catalog.hypermesh.online"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hypermesh-online/catalog"
keywords = ["assets", "hypermesh", "package-manager", "trustchain", "distributed"]

[dependencies]
# Core async runtime
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Scripting languages (library support only - no local execution)
mlua = { version = "0.9", features = ["lua54", "async", "serialize"] }

# No security/sandboxing needed - execution delegated to HyperMesh
# Previous julia/wasmtime/seccomp/landlock dependencies removed
# All execution happens on HyperMesh infrastructure

# Asset management
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Cryptography and hashing
sha2 = "0.10"
blake3 = "1.5"
ring = "0.17"
ed25519-dalek = "2.0"

# Data structures
dashmap = "6.0"
arc-swap = "1.7"
parking_lot = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system and compression (for asset packages)
tar = "0.4"
flate2 = "1.0"
tempfile = "3.8"

# Time and uuid
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }

# Configuration
config = "0.14"

# Template engine (for asset package templates)
handlebars = "5.1"
regex = "1.10"

# HTTP client for HyperMesh communication
reqwest = { version = "0.12", features = ["json"] }

# Encoding utilities
base64 = "0.22"
hex = "0.4"

# Path expansion (for asset package paths)
shellexpand = "3.1"

# Globbing (for asset discovery)
glob = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"

[features]
default = ["hypermesh-integration"]

# HyperMesh integration features
hypermesh-integration = []

# Scripting support (template/config only - no execution)
lua-scripting = []

# TrustChain certificate support
trustchain-support = []

# Asset package management features
asset-templates = []
asset-validation = []

[lib]
name = "catalog"
path = "src/lib.rs"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

