[package]
name = "catalog"
version = "0.1.0"
edition = "2021"
authors = ["HyperMesh Team"]
description = "Catalog - HyperMesh Asset Package Manager for catalog.hypermesh.online"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hypermesh-online/catalog"
keywords = ["assets", "hypermesh", "package-manager", "trustchain", "distributed"]

[dependencies]
# HyperMesh integration for consensus and asset management
hypermesh = { path = "../hypermesh" }

# Core async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Scripting languages (library support only - no local execution)
mlua = { version = "0.9", features = ["lua54", "async", "serialize"] }

# Asset management
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Cryptography and hashing
sha2 = { workspace = true }
blake3 = { workspace = true }
ring = { workspace = true }
ed25519-dalek = { workspace = true }

# Data structures
dashmap = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# File system and compression
tar = { workspace = true }
flate2 = { workspace = true }
tempfile = { workspace = true }

# Time and uuid
chrono = { workspace = true }
uuid = { workspace = true }

# Configuration
config = { workspace = true }

# Template engine
handlebars = { workspace = true }
regex = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Encoding utilities
base64 = { workspace = true }
hex = { workspace = true }

# Path expansion
shellexpand = { workspace = true }

# Globbing
glob = { workspace = true }

# Additional dependencies for library module
lazy_static = { workspace = true }
bincode = { workspace = true }

# Extension module dependencies
semver = { workspace = true }

# Dynamic loading support
libloading = { workspace = true }

# P2P Distribution dependencies
quinn = { workspace = true }
bytes = { workspace = true }
zstd = { workspace = true }
lz4 = { workspace = true }
socket2 = { workspace = true }

[build-dependencies]
# No build dependencies needed

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["hypermesh-integration"]

# HyperMesh integration features
hypermesh-integration = []

# Scripting support (template/config only - no execution)
lua-scripting = []

# TrustChain certificate support
trustchain-support = []

# Asset package management features
asset-templates = []
asset-validation = []

[lib]
name = "catalog"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


# Profiles are managed at workspace level

