[package]
name = "hypermesh-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Identifiers
uuid = { version = "1.10", features = ["v4", "serde"] }

# Async runtime (for Proof of State consensus)
tokio = { version = "1.38", features = ["full"] }

# Cryptography (for consensus proofs)
sha2 = "0.10"
blake3 = "1.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "hypermesh_lib"
path = "src/lib.rs"
