[package]
name = "phoenix-cli"
version = "1.0.0"
edition = "2021"
authors = ["Phoenix Team"]
description = "Command-line interface for Phoenix SDK - High-performance distributed computing made simple"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hypermesh-online/phoenix-cli"
keywords = ["phoenix", "distributed", "cli", "development", "tools"]
categories = ["command-line-utilities", "development-tools", "network-programming"]

[[bin]]
name = "phoenix"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"

# Terminal UI
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
crossterm = "0.27"
comfy-table = "7.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# File system operations
walkdir = "2.4"
tempfile = "3.9"

# Process management
sysinfo = "0.30"

# Date/time
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Template engine
handlebars = "5.0"

# Git operations
git2 = "0.18"

# Archive operations
zip = "0.6"
tar = "0.6"
flate2 = "1.0"

# Configuration management
config = "0.14"
directories = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Phoenix SDK (when developing real CLI)
# phoenix-sdk = { path = "../phoenix-sdk" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempdir = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true