[package]
name = "phoenix-sdk"
version = "1.0.0"
edition = "2021"
authors = ["Phoenix Team"]
description = "Phoenix SDK - High-performance distributed computing made simple"
license = "MIT OR Apache-2.0"
keywords = ["phoenix", "sdk", "distributed", "networking", "high-performance"]
documentation = "https://docs.phoenix.dev"
repository = "https://github.com/hypermesh-online/phoenix-sdk"
readme = "README.md"

[dependencies]
# Core async runtime
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Local protocol dependencies
stoq = { path = "../stoq" }
trustchain = { path = "../trustchain" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Compression
flate2 = { version = "1.0", optional = true }
zstd = { version = "0.13", optional = true }
lz4 = { version = "1.24", optional = true }

# Performance monitoring
sysinfo = "0.30"
prometheus = { version = "0.13", optional = true }

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
bytes = "1.6"
parking_lot = "0.12"
dashmap = "6.0"
arc-swap = "1.7"
crossbeam = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# Web dashboard (optional)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tempfile = "3.10"
tokio-test = "0.4"
pretty_assertions = "1.4"
proptest = "1.4"

[features]
default = ["metrics"]
compression = ["flate2", "zstd", "lz4"]
metrics = []
dashboard = ["axum", "tower", "tower-http", "prometheus"]
# Post-quantum support is built into the base libraries
post-quantum = []
development = []
production = ["post-quantum"]

[[example]]
name = "chat_server"
path = "examples/chat_server.rs"

[[example]]
name = "chat_client"
path = "examples/chat_client.rs"

[[example]]
name = "file_transfer"
path = "examples/file_transfer.rs"

[[example]]
name = "microservice"
path = "examples/microservice.rs"

[[example]]
name = "metrics_dashboard"
path = "examples/metrics_dashboard.rs"
required-features = ["dashboard"]

# Benchmarks will be added later
# [[bench]]
# name = "throughput"
# harness = false
#
# [[bench]]
# name = "latency"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[profile.dev]
opt-level = 1
debug = true

[profile.bench]
inherits = "release"
debug = true