[package]
name = "satchel"
version = "0.1.0"
edition = "2021"

[dependencies]
hypermesh-lib = { path = "../lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"

[lib]
name = "satchel"
path = "src/lib.rs"
