[package]
name = "stoq"
version = "0.1.0"
edition = "2021"
authors = ["HyperMesh Team"]
description = "STOQ Protocol - Pure QUIC over IPv6 Transport (Transport Layer Only)"
license = "MIT OR Apache-2.0"

[dependencies]
# Core async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# QUIC implementation
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }

# Networking
socket2 = { workspace = true }
bytes = { workspace = true }

# Data structures for 40 Gbps optimization
dashmap = { workspace = true }
arc-swap = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
lock_api = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
bincode = { workspace = true }

# Hashing and crypto
sha2 = { workspace = true }
blake3 = { workspace = true }
ring = { workspace = true }
x509-parser = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
webpki-roots = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }

# Post-quantum cryptography
pqcrypto = { workspace = true }
pqcrypto-falcon = { workspace = true }
pqcrypto-traits = { workspace = true }

# Metrics and logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time and UUID
chrono = { workspace = true }
uuid = { workspace = true }

# Configuration
config = { workspace = true }
clap = { workspace = true }

# WebAssembly dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console", "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# eBPF support for kernel-level optimizations
# Note: eBPF requires additional system configuration and compilation steps
# See EBPF_IMPLEMENTATION.md for details

# Optional ML for routing optimization (placeholder)
# candle = { version = "0.5", optional = true }

[build-dependencies]
# No build dependencies needed for now

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
quickcheck = "1.0"
tempfile = { workspace = true }
futures = { workspace = true }
# wireshark = "0.1"  # For packet analysis in tests - optional

[features]
default = ["high-performance"]
high-performance = [] # Zero-copy operations, connection multiplexing
ebpf = [] # eBPF transport acceleration (requires system setup)
benchmark = []
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys"]

[[bench]]
name = "throughput"
harness = false

# Profiles are managed at workspace level